<resources>
    <string name="app_name">Book Listing</string>
    <string name="book_title">Title : </string>
    <string name="author_name">Authors : </string>
    <string name="subtitle">Subtitle : </string>
    <string name="publisher">Publisher : </string>
    <string name="published_date">Published Date : </string>
    <string name="placeholder_text">Some text goes here when data has been recieved.</string>
    <string name="search">Search</string>
</resources>
